@@ -35,6 +35,7 @@
 #' 
 #' To also be able to use hyphenation, the package sylly.es needs to exist and be loaded.
 #'
+#' @param ... Optional arguments for \code{\link[koRpus:set.lang.support]{set.lang.support}}.
 #' @references
 #' [1] \url{http://www.cis.uni-muenchen.de/~schmid/tools/TreeTagger/}
 #'
@@ -46,7 +47,7 @@
 #' lang.support.es()
 #' }
 
-lang.support.es <- function() {
+lang.support.es <- function(...) {
   koRpus::set.lang.support("treetag",
     list("es"=list(
       ## preset: "es"
@@ -94,7 +95,8 @@ lang.support.es <- function() {
           )
         }
       })
-    )
+    ),
+    ...
   )
 
   koRpus::set.lang.support("kRp.POS.tags",
@@ -184,7 +186,8 @@ lang.support.es <- function() {
         "FS", "fullstop", "Full stop punctuation marks"
         ), ncol = 3, byrow = TRUE, dimnames = list(c(), c("tag", "wclass", "desc")))
       )
-    )
+    ),
+    ...
   )
 }
 
